Fixed CSS spacing issues and moved SocialIcons component into the Footer component

--- a/src/modules/Parts/Hero/Hero.css
+++ b/src/modules/Parts/Hero/Hero.css
@@ -1,3 +1,14 @@
+/* *,
+*::before,
+*::after {
+    box-sizing: border-box;
+    overflow-x: hidden;
+} */
+.Hero,
+.Hero * {
+    box-sizing: border-box;
+}
+
 .Hero {
     position: relative;
 
@@ -30,10 +41,13 @@
 .Hero > * {
     position: relative;
     z-index: 2; /* Ensure the text is above the overlay */
-    width: 66%;
+    width: 85%;
     font-weight: bold;
+    overflow: hidden;
+    text-align: center;
 }
 
 .Hero > h1 {
-    font-size: 4rem;
+    font-size: 3rem;
+    white-space: normal;
 }
